# DraftPort

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/electron/: README.md  electron-builder.json  package-lock.json  package.json
apps/electron/assets/: icon.icns
apps/electron/src/: main.ts  packagingConfig.test.ts  preload.ts  recentItemsStore.test.ts  recentItemsStore.ts  updater.ts
apps/server/: COS_SETUP.md  package.json
apps/tauri/: package.json
apps/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: main.rs
apps/tauri/src-tauri/src/commands/: clipboard.rs  files.rs  folders.rs  mod.rs  recent.rs  window.rs  workspace.rs
apps/tauri/src-tauri/src/domain/: mod.rs  recent.rs  workspace.rs  workspace_order.rs
apps/tauri/src-tauri/src/platform/: asset.rs  clipboard.rs  menu.rs  mod.rs
apps/tauri/src-tauri/src/shared/: mod.rs  model.rs  util.rs
apps/web/: index.html  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.css  App.tsx  main.tsx
docs/plans/: 2026-06-26-editor-outline.md
docs/superpowers/plans/: 2026-06-25-typora-like-wysiwyg-editor.md  2026-06-26-editor-only-scope.md  (+2 more)
scripts/: run-desktop-dev.mjs
templates/: Academic-Paper.css  Aurora-Glass.css  Bauhaus.css  Cyberpunk-Neon.css  Knowledge-Base.css  Luxury-Gold.css  Morandi-Forest.css  Neo-Brutalism.css  Receipt.css  Sunset-Film.css  Template.css
(+160 files in other folders)
