[package]
name = "draftport-tauri"
version = "1.0.1"
description = "DraftPort desktop shell powered by Tauri"
authors = ["DraftPort Team"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["std"] }
mime_guess = "2.0.5"
notify = "8.2.0"
open = "5.3.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2.7.0"
urlencoding = "2.1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
